# ai-research-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/agents/: research_agent.py  research_graph.py
app/api/: routes.py
app/tools/: web_search.py
